[tool.poetry]
name = "c_p_reach"
version = "0.1.0"
description = ""
authors = ["James Goppert <james.goppert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
casadi = "^3.6.7"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
c_p_reach = 'c_p_reach.console:run'
