[tool.poetry]
name = "c_p_reach"
version = "0.2.4"
description = ""
authors = [
	"Li-Yu Lin",
	"Kylie Sommer-Kohrt",
	"James Goppert <james.goppert@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
casadi = "^3.6.7"
setuptools = "^75.6.0"
pytope = "^0.0.4"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
control = "^0.10.1"
sympy = "^1.13.3"
picos = "^2.5.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
c_p_reach = 'c_p_reach.multirotor_flowpipe3d:run'
